--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       }
     </script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4LYJg8vJP5GC3JF9XC8aydQ1-osJIReA&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=<yourKey>&callback=initMap"
       async
       defer
     ></script>
